--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,7 @@
+[theme]
+primaryColor = "#F39C12"
+backgroundColor = "#1E1E1E"
+secondaryBackgroundColor = "#2C2C2C"
+textColor = "#FFFFFF"
+font = "sans serif"
 
