--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,7 @@
- "#2980B9",
-        "backgroundColor": "#FFFFFF",
-        "secondaryBackgroundColor": "#EAF2F8",
-        "textColor": "#000000",
-        "font": "serif"
+[theme]
+primaryColor = "#F39C12"
+backgroundColor = "#1E1E1E"
+secondaryBackgroundColor = "#2C2C2C"
+textColor = "#FFFFFF"
+font = "sans serif"
+
